syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleResponse) {}
}

enum UserRole {
  OWNER = 0;
  ADMIN = 1;
  USER = 2;
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status = 1;
  repeated string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
  UserRole role = 4;
}

// Update role

message UpdateRoleRequest {
  UserRole role = 1;
  string email = 2;
}

message UpdateRoleResponse {
  int32 status = 1;
  repeated string error = 2;
}